--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -210,6 +210,7 @@ footer {
   background-color: $black;
   font-size: 0.7rem;
   color: $white;
+  z-index: 100;
 
   .footer__links {
     list-style: none;
