--- a/src/app/edit-profile/edit-profile.component.scss
+++ b/src/app/edit-profile/edit-profile.component.scss
@@ -42,7 +42,7 @@ section {
       overflow: hidden;
       border-radius: 50%;
       background-size: cover;
-
+      background-position: center;
       img {
         width: 100%;
       }
