--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -18,7 +18,7 @@
         border-radius: 50%;
         margin: 0 auto 1rem;
         background-size: cover;
-
+        background-position: center;
         img {
           width: 100%;
         }
@@ -119,7 +119,7 @@
     }
 
     .user__about {
-      margin-top: 1rem;
+      margin-top: 1.2rem;
       font-size: 0.8rem;
       .user__about__title {
         font-weight: 600;
@@ -160,6 +160,15 @@
           transition: all 0.2s linear;
           border-radius: 3px;
           background-color: $primary;
+
+          .private__icon {
+            color: $danger;
+            background-color: #fff;
+            padding: 3px;
+            position: absolute;
+            top: 10px;
+            left: 10px;
+          }
 
           .post__card__details {
             position: absolute;
