--- a/src/app/search-people/search-people.component.html
+++ b/src/app/search-people/search-people.component.html
@@ -12,7 +12,7 @@
       href="#"
       class="people__details__thumbnail"
       [ngStyle]="{
-        'background-image': 'url(' + '' + ')'
+        'background-image': 'url()'
       }"
     ></a>
   </ng-template>
